--- a/lab-0/lab0B.css
+++ b/lab-0/lab0B.css
@@ -35,7 +35,7 @@ div {
 }
 
 .main-content {
-    display: flex;
+    position: relative;
     margin-top: 10px;
 }
 
@@ -59,25 +59,28 @@ li:hover a {
 }
 
 .friends-box {
+    position: absolute;
+}
+
+.friends-box {
     background-color: red;
     padding: 10px;
-    height: max-content;
     min-width: 15%;
-    margin: 10px;
-    margin-left: 0;
 }
 
 .friends-box h1 {
     font-weight: 400;
 }
 
-.blog-posts-box * {
-    color: black;
-}
-
 .blog-posts-box {
     margin: 10px;
+    margin-left: 15%;
     margin-right: 0;
+    padding-left: 30px;
+}
+
+.blog-posts-box * {
+    color: black;
 }
 
 .friends-box h1 {
