--- a/lab2/style.css
+++ b/lab2/style.css
@@ -33,3 +33,12 @@ body {
 #content {
     padding: 20px;
 }
+
+#table th {
+    border: 1px solid;
+    padding: 10px;
+}
+
+#table table {
+    width: 100%;
+}
