--- a/lab2/style.css
+++ b/lab2/style.css
@@ -37,6 +37,11 @@ body {
 #table th {
     border: 1px solid;
     padding: 10px;
+    font-weight: normal;
+}
+
+#table thead th {
+    font-weight: bold;
 }
 
 #table table {
